--- a/gitops/clusters/crossplane/clusters/shared/aks-ce-eastus-prod/cluster-claim.yaml
+++ b/gitops/clusters/crossplane/clusters/shared/aks-ce-eastus-prod/cluster-claim.yaml
@@ -1,5 +1,5 @@
 
-apiVersion: kubernetes.example.com/v1alpha1
+apiVersion: kubernetes.mckesson.com/v1alpha1
 kind: AksClusterClaim
 metadata:
   name: aks-ce-eastus-prod
