--- a/gitops/clusters/crossplane/base/cluster/aks-composition.yaml
+++ b/gitops/clusters/crossplane/base/cluster/aks-composition.yaml
@@ -388,5 +388,5 @@ spec:
         - fromFieldPath: metadata.name
           toFieldPath: spec.providerConfigRef.name 
   compositeTypeRef:
-    apiVersion: kubernetes.example.com/v1alpha1
+    apiVersion: kubernetes.mckesson.com/v1alpha1
     kind: XAksCluster
