--- a/gitops/clusters/crossplane/clusters/shared/base/cluster-claim.yaml
+++ b/gitops/clusters/crossplane/clusters/shared/base/cluster-claim.yaml
@@ -1,4 +1,4 @@
-apiVersion: kubernetes.example.com/v1alpha1
+apiVersion: kubernetes.mckesson.com/v1alpha1
 kind: AksClusterClaim
 metadata:
   name: aks-ce-cluster
