--- a/gitops/clusters/crossplane/base/cluster/kustomization.yaml
+++ b/gitops/clusters/crossplane/base/cluster/kustomization.yaml
@@ -1,4 +1,6 @@
----
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
   - aks-composite-resource-definition.yaml
   - aks-composition.yaml
