--- a/gitops/environments/default/addons/argo-cd/values.yaml
+++ b/gitops/environments/default/addons/argo-cd/values.yaml
@@ -51,10 +51,37 @@ server:
       annotations:
         prometheus.io/scrape: true
   service:
-    type: LoadBalancer
+    type: ClusterIP
     annotations:
-      # https://cloud-provider-azure.sigs.k8s.io/topics/loadbalancer/#loadbalancer-annotations
-      service.beta.kubernetes.io/azure-load-balancer-internal: false
+      # Service annotations for ingress
+      prometheus.io/scrape: true
+
+  # Ingress configuration for ArgoCD
+  ingress:
+    enabled: true
+    ingressClassName: nginx
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      nginx.ingress.kubernetes.io/ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+      # ArgoCD specific annotations
+      nginx.ingress.kubernetes.io/configuration-snippet: |
+        more_set_headers "X-Frame-Options DENY";
+        more_set_headers "X-Content-Type-Options nosniff";
+        more_set_headers "X-XSS-Protection 1; mode=block";
+    hosts:
+      - host: argocd.poc.westus3.mckesson.com
+        paths:
+          - path: /
+            pathType: Prefix
+    tls:
+      - secretName: argocd-tls
+        hosts:
+          - argocd.poc.westus3.mckesson.com
+        # Use cert-manager for automatic certificate management
+        # The certificate will be automatically created by cert-manager
 
 configs:
   cm:
