feat: Add nginx-ingress, cert-manager, and cluster provisioning with GitOps Bridge
- Add nginx-ingress ApplicationSet for GitOps-managed ingress controller
- Add cert-manager ApplicationSet for automatic TLS certificate management
- Add clusters ApplicationSet for AKS cluster provisioning with Crossplane
- Update cluster metadata with infrastructure_provider annotation
- Fix nginx-ingress ApplicationSet selector to match cluster labels
- Replace placeholder values in ClusterIssuer with actual Azure credentials
- Create validation script for configuration testing
- Add comprehensive documentation for all new components

--- a/gitops/bootstrap/control-plane/addons/oss/addons-nginx-ingress-appset.yaml
+++ b/gitops/bootstrap/control-plane/addons/oss/addons-nginx-ingress-appset.yaml
@@ -19,7 +19,7 @@ spec:
                 addonChartRepository: https://kubernetes.github.io/ingress-nginx
               selector:
                 matchExpressions:
-                  - key: enable_nginx_ingress
+                  - key: enable_ingress_nginx
                     operator: In
                     values: ['true']
           - clusters:
