--- a/gitops/clusters/crossplane/base/cluster/aks-composition.yaml
+++ b/gitops/clusters/crossplane/base/cluster/aks-composition.yaml
@@ -278,25 +278,26 @@ spec:
         - type: FromCompositeFieldPath
           fromFieldPath: spec.resourceGroup.tags
           toFieldPath: spec.forProvider.tags
-    - name: aks-role-assignment
-      base:
-        apiVersion: authorization.azure.upbound.io/v1beta1
-        kind: RoleAssignment
-        spec:
-          forProvider:
-            roleDefinitionName: "Azure Kubernetes Service RBAC Admin"
-            scope: "place-holder"
-      patches:
-        - type: FromCompositeFieldPath
-          fromFieldPath: status.atProvider.clusterId
-          toFieldPath: spec.forProvider.scope
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.aks.adminUser
-          toFieldPath: spec.forProvider.principalId
-      readinessChecks:
-        - type: MatchString
-          fieldPath: status.atProvider.id
-          matchString: ".*"
+    # Temporarily disabled RoleAssignment to allow AKS cluster creation
+    # - name: aks-role-assignment
+    #   base:
+    #     apiVersion: authorization.azure.upbound.io/v1beta1
+    #     kind: RoleAssignment
+    #     spec:
+    #       forProvider:
+    #         roleDefinitionName: "Azure Kubernetes Service RBAC Admin"
+    #         scope: "place-holder"
+    #   patches:
+    #     - type: FromCompositeFieldPath
+    #       fromFieldPath: status.atProvider.clusterId
+    #       toFieldPath: spec.forProvider.scope
+    #     - type: FromCompositeFieldPath
+    #       fromFieldPath: spec.aks.adminUser
+    #       toFieldPath: spec.forProvider.principalId
+    #   readinessChecks:
+    #     - type: MatchString
+    #       fieldPath: status.atProvider.id
+    #       matchString: ".*"
     - name: helm-provider-config
       base:
         apiVersion: helm.crossplane.io/v1beta1
